objects/vlocity_cmt__Jurisdiction__c.object
<CustomObject>
    <description>Defines the geographic area over which authority extend; legal authority; the authority to hear and determine causes of action.</description>
    <fields>
        <fullName>vlocity_cmt__City__c</fullName>
        <description>Name of Jurisdiction&apos;s city.</description>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CountryCode__c</fullName>
        <description>The ISO country code for the Jurisdiction.</description>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_cmt__Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__County__c</fullName>
        <description>Name of Jurisdiction&apos;s county.</description>
        <label>County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentJurisdictionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the Parent Jurisdiction.</description>
        <label>Parent Jurisdiction</label>
        <referenceTo>vlocity_cmt__Jurisdiction__c</referenceTo>
        <relationshipLabel>Jurisdictions</relationshipLabel>
        <relationshipName>Jurisdictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PostalCode__c</fullName>
        <description>Postal Code of the Jurisdiction.</description>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StateCode__c</fullName>
        <description>DEPRECATED. Please use States/Provinces.</description>
        <label>State Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_cmt__State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatesProvinces__c</fullName>
        <description>ISO codes for State/Province for the Jurisdiction.</description>
        <label>States/Provinces</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_cmt__VlocityStateProvince</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <description>Type of Jurisdiction such as Fedaral, State, County, or City.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Jurisdiction</label>
    <nameField>
        <label>Jurisdiction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jurisdictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>